# idaphsCAD

./: Cargo.toml  test_data.idaphsprt  test_data3.idaphsprt
crates/app/: Cargo.toml
crates/app/src/: api_check.rs  base_ops.rs  cad_data.rs  camera.rs  extrusion.rs  main.rs  messages.rs  scene.rs  selection.rs  sketch.rs  slint_truck_adapter.rs  toolbar.rs
crates/cad_app/: Cargo.toml  build.rs
crates/cad_app/src/: baseop.rs  main.rs  menubar.rs  messages.rs  msg_macro.rs  selection_mode.rs  sketch_mode.rs  tool.rs  toolbar.rs
crates/cad_core/: Cargo.toml
crates/cad_core/src/: app_config.rs  cad_data.rs  context.rs  file_io.rs  lib.rs
crates/cad_renderer/: Cargo.toml
crates/cad_renderer/src/: camera_op.rs  kernel.rs  lib.rs  lyon_renderer.rs  messages.rs  renderer.rs  slint_truck_adapter.rs
crates/cad_renderer/src/lyon_shader/: lyon_shader.wgsl
ui/: main-window.slint
ui/components/toolbar/: toolbar.slint
