[package]
name = "cad_renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compat = "0.2.5"
async-trait = "0.1.89"
slint = { version = "1.16.1", features=["renderer-skia", "unstable-wgpu-27"] }
smol = "2.0.2"
truck-platform = "0.6.0"
truck-rendimpl = "0.6.0" 
truck-modeling = "0.6.0" 
truck-meshalgo = "0.4.0"
truck-polymesh = "0.6.0"
truck-topology = "0.6.0"
web-time = "1.1.0" 
lyon = "1.0.19"
bytemuck = "1.25.0"

cad_core = { path = "../cad_core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# used to run code common to wasm build. 
pollster = "0.4.0" 

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
codegen-units = 1
lto = true
